--- a/.github/workflows/deploy-to-minikube-github-actions.yaml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yaml
@@ -22,6 +22,9 @@ jobs:
     - name: Deploy to minikube
       run:
         kubectl apply -f k8s-node-app.yaml
+    - name: Wait for pod to start
+      run: |
+        while [[ "$(kubectl get pods -l app=nodejs-app -o 'jsonpath={..status.conditions[?(@.type=="Ready")].status}')" != "True" ]]; do sleep 5; echo "Waiting for pod to be ready..."; done    
     - name: Test service URLs
       run: |
           minikube service list
