--- a/.github/workflows/deploy-to-minikube-github-actions.yaml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yaml
@@ -24,7 +24,7 @@ jobs:
         kubectl apply -f k8s-node-app.yaml
     - name: Wait for pod to start
       run: |
-        while [[ "$(kubectl get pods -l app=nodejs-app -o 'jsonpath={..status.conditions[?(@.type=="Ready")].status}')" != "True" ]]; do sleep 5; echo "Waiting for pod to be ready..."; done    
+        run: sleep 5
     - name: Test service URLs
       run: |
           minikube service list
